--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                 <div class="container"><div class="page home"><div class="home-profile"><div class="home-avatar"><a href="/posts/" title="文章"><img
         class="lazyload"
         src="/svg/loading.min.svg"
-        data-src="https://img2.baidu.com/it/u=13110066,1156955909&amp;fm=253&amp;fmt=auto&amp;app=138&amp;f=JPEG?w=500&amp;h=500"
-        data-srcset="https://img2.baidu.com/it/u=13110066%2c1156955909&amp;fm=253&amp;fmt=auto&amp;app=138&amp;f=JPEG?w=500&amp;h=500, https://img2.baidu.com/it/u=13110066%2c1156955909&amp;fm=253&amp;fmt=auto&amp;app=138&amp;f=JPEG?w=500&amp;h=500 1.5x, https://img2.baidu.com/it/u=13110066%2c1156955909&amp;fm=253&amp;fmt=auto&amp;app=138&amp;f=JPEG?w=500&amp;h=500 2x"
+        data-src="./images/avatar.png"
+        data-srcset="./images/avatar.png, ./images/avatar.png 1.5x, ./images/avatar.png 2x"
         data-sizes="auto"
-        alt="https://img2.baidu.com/it/u=13110066,1156955909&amp;fm=253&amp;fmt=auto&amp;app=138&amp;f=JPEG?w=500&amp;h=500"
-        title="https://img2.baidu.com/it/u=13110066,1156955909&amp;fm=253&amp;fmt=auto&amp;app=138&amp;f=JPEG?w=500&amp;h=500" /></a></div><h1 class="home-title"><p style="font-size:35px"> 祝你心明眼亮 👋 </p></h1></div>
+        alt="./images/avatar.png"
+        title="./images/avatar.png" /></a></div><h1 class="home-title"><p style="font-size:35px"> 祝你心明眼亮 👋 </p></h1></div>
 </div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2020 - 2023</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">V3NN</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
