--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         data-srcset="./images/avatar.png, ./images/avatar.png 1.5x, ./images/avatar.png 2x"
         data-sizes="auto"
         alt="./images/avatar.png"
-        title="./images/avatar.png" /></a></div><h1 class="home-title"><p style="font-size:35px"> 祝你心明眼亮 👋 </p></h1></div>
+        title="./images/avatar.png" /></a></div><h1 class="home-title"><p style="font-size:35px"> 祝您心明眼亮👋</p></h1></div>
 </div></div>
             </main><footer class="footer">
         <div class="footer-container"><div class="footer-line" itemscope itemtype="http://schema.org/CreativeWork"><i class="far fa-copyright fa-fw" aria-hidden="true"></i><span itemprop="copyrightYear">2020 - 2023</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">V3NN</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
